# bloggit

./: .gitignore  2018-12-03-Replace-by-Fee,-an-Explainer.md  flake.nix  home.html  newpost.sh  preview.sh  publish.sh  pyproject.toml  script.py
drafts/: 2016-03-02-a-very-new-post.md  2016-03-02-eighteen.md  2016-03-02-five-banks.md  2016-03-02-four-claims-of-righteousness.md  2016-03-02-i-can't-even.md  2016-03-02-one-times-two.md  2016-03-02-second-best.md  2016-03-02-seven-eves.md  2016-03-02-sick-sets.md  2016-03-02-third-charms.md  2016-03-06-.md  2016-03-06-A-Case-for-Extravagance.md  2016-03-12-the-surprising-thing-about-randomness.md  2016-03-31-Efficiency-as-False-Prophet.md  2016-05-04-Go-in-Peace,-Use-the-(White)Board.md  2016-07-10-How-Long-Until-A-Nerual-Net-Re-implements-HTTP?.md  2016-07-10-How-Long-Until-A-Neural-Net-Re-implements-HTTP.md  2016-07-10-Your-Bugs-are-Making-You-Better.md  2016-08-08-Ring-Benchmark-in-Erlang-and-Go.md  2017-01-10-Death-by-Thirst.md  2017-01-19-Interviews-Questions-To-Ask.md  2017-01-20-The-Type-of-Problem-that-is-an-Algorithm.md  2017-03-12-*Redaxted*.md  2017-03-26-Bugs-of-Projects-Past.md  2017-04-27-Roadblocks-on-the-Way-to-Refactoring.md  2017-04-29-Women-In-Tech.md  2017-07-11-The-Art-of-Differentiation.md  2017-08-10-Trying-to-Fit-a-Tonka-in-a-Minivan.md  2017-11-26-Finding-O.md  2018-01-02-Moon-Clock:-The-First-Lunar-Timepiece.md  2018-02-21-Moon-Clock,-An-Update.md  2018-04-29-On-Outages.md  2018-06-21-Whats-Wrong-with-Nothing.md  2018-07-01-On-the-Nature-of-Bitcoin.md  2018-08-05-Dear-Mother.md  (+28 more)
templates/: home.html  (+5 more)
(+10 files in other folders)
