[project]
name = "bloggit"
version = "0.1.0"
description = "niftynei's static website generator and blog"
authors = [
    {name = "niftynei",email = "niftynei@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pystache (>=0.6.8,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
